# app/models/group_user.rb
@@ -1,5 +1,4 @@
 class GroupUser < ApplicationRecord
-  belongs_to :group
-  belongs_to :user
-  
+  belongs_to :group, foreign_key: 'group_id', primary_key: 'group_id'
+  belongs_to :user, foreign_key: 'firebase_uid', primary_key: 'firebase_uid'
 end
