# app/models/user.rb
@@ -1,4 +1,7 @@
 class User < ApplicationRecord
-  has_many :group_users
+  self.primary_key = 'firebase_uid'
+  
+  has_many :group_users, foreign_key: 'firebase_uid'
   has_many :groups, through: :group_users
+  has_many :user_devices, foreign_key: 'firebase_uid'
 end
