# app/models/user_device.rb
@@ -1,3 +1,3 @@
 class UserDevice < ApplicationRecord
-  belongs_to :user
+  belongs_to :user, foreign_key: 'firebase_uid', primary_key: 'firebase_uid'
 end
